[metadata]
name = sqlalchemy-tibero
version = attr: sqlalchemy_tibero.__version__
description = SQLAlchemy Tibero Dialect
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/ybjeon01/sqlalchemy-tibero
author = Yeongbae Jeon
author_email = ybjeon01@naver.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Database :: Front-Ends
keywords =
    SQLAlchemy
    Tibero
project_urls =
    Documentation=https://github.com/ybjeon01/sqlalchemy-tibero/wiki
    Source=https://github.com/ybjeon01/sqlalchemy-tibero
    Tracker=https://github.com/ybjeon01/sqlalchemy-tibero/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    SQLAlchemy

[options.extras_require]
pyodbc = pyodbc>=5

[options.packages.find]
include = sqlalchemy_tibero
exclude =
    test*

[options.entry_points]
sqlalchemy.dialects =
    tibero.pyodbc = sqlalchemy_tibero.pyodbc:TiberoDialect_pyodbc

[sqla_testing]
requirement_cls = sqlalchemy_tibero.requirements:DefaultRequirements
oracle_db_link = test_link
oracle_db_link2 = test_link2

[db]
tibero = tibero+pyodbc://tibero:tmax@Tibero7
